creacion del usuario, conexion con la base de datos, configuracion de seguridad y prueba de controlador usuario
